# DepGuard

./: .gitignore  LICENSE  README.md  depguard.py  doctor.py  pyproject.toml  setup.md
checks/: __init__.py  base.py  databases.py  dependency_alignment.py  detection.py  docker.py  env_file.py  frameworks.py  git_init.py  infrastructure.py  node_modules.py  node_version.py  python_version.py  requirements.py  runtime_versions.py  venv_active.py  web_frontend.py
docs/: UPGRADES.md
tests/: test_detection.py
